--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    android:focusableInTouchMode="true">
+    android:background="@android:color/black"
+    android:focusableInTouchMode="true"
+    tools:context=".MainActivity">
+
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -21,56 +23,102 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_main"
-        />
+    <!--<include layout="@layout/content_main"
+        />-->
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
         android:tint="@android:color/background_light"
-        app:srcCompat="@android:drawable/ic_input_add" />
+
+        app:srcCompat="@android:drawable/ic_menu_rotate" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_above="@+id/fab"
+        android:layout_alignParentEnd="true"
+        android:layout_marginRight="16dp"
         android:src="@android:drawable/ic_menu_delete"
         android:tint="@android:color/background_light"
+        android:visibility="gone"
         app:layout_anchor="@id/fab"
-        android:layout_marginBottom="85dp"
-        app:layout_anchorGravity="top|center"/>
+        app:layout_anchorGravity="top|center" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
+        android:layout_above="@+id/fab2"
+        android:layout_alignParentEnd="true"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="16dp"
         android:src="@android:drawable/ic_input_delete"
         android:tint="@android:color/background_light"
+        android:visibility="gone"
         app:layout_anchor="@id/fab2"
-        android:layout_marginBottom="150dp"
         app:layout_anchorGravity="top|center" />
+
+    <TextView
+        android:id="@+id/textview_temp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:background="@android:color/black"
+        android:textColor="@android:color/holo_green_dark"
+        android:textSize="36pt"
+        android:typeface="serif"
+        tools:text="25" />
+
+    <TextView
+        android:id="@+id/textview_temp_unit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:layout_toRightOf="@+id/textview_temp"
+        android:background="@android:color/black"
+        android:text="ºC"
+        android:textColor="@android:color/holo_green_dark"
+        android:textSize="16pt"
+        android:typeface="serif"
+        tools:text="ºC" />
+
+    <TextView
+        android:id="@+id/textview_date"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textview_temp"
+        android:layout_centerInParent="true"
+        android:background="@android:color/black"
+        android:textColor="@android:color/white"
+        android:textSize="8pt"
+        android:typeface="sans"
+        tools:text="Thursday 25th May, 20:15" />
 
     <android.support.design.widget.TextInputEditText
         android:id="@+id/input_edit_text"
         android:layout_width="60dp"
         android:layout_height="48dp"
-        android:layout_marginBottom="216dp"
-        app:layout_anchor="@id/fab3"
-        app:layout_anchorGravity="top|center" />
+        android:layout_above="@+id/fab4"
+        android:layout_alignParentEnd="true"
+        android:layout_marginRight="16dp" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="top"
+        android:layout_alignParentTop="true"
         android:layout_margin="@dimen/fab_margin"
+        android:layout_marginRight="16dp"
+        android:text="OK"
         android:tint="@android:color/white"
-        app:srcCompat="@android:drawable/ic_menu_save"
-        android:text="OK"/>
+        app:srcCompat="@android:drawable/ic_menu_save" />
 
     <android.support.design.widget.TextInputEditText
         android:id="@+id/edit_user"
@@ -78,6 +126,7 @@
         android:layout_height="48dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="64dp"
+        android:background="@android:color/darker_gray"
         app:layout_anchorGravity="top|center" />
 
     <android.support.design.widget.TextInputEditText
@@ -85,7 +134,8 @@
         android:layout_width="180dp"
         android:layout_height="48dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="120dp"
+        android:background="@android:color/darker_gray"
         app:layout_anchorGravity="top|center" />
 
     <android.support.design.widget.TextInputEditText
@@ -93,7 +143,18 @@
         android:layout_width="180dp"
         android:layout_height="48dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="136dp"
+        android:layout_marginTop="175dp"
+        android:background="@android:color/darker_gray"
         app:layout_anchorGravity="top|center" />
 
-</android.support.design.widget.CoordinatorLayout>
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="296dp"
+        android:layout_height="158dp"
+        android:layout_centerInParent="true"
+        android:background="@android:color/black"
+        android:indeterminateDrawable="@drawable/progress_icon"
+        android:visibility="gone" />
+
+</RelativeLayout>
