--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,160 +1,80 @@
-<?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?><!--
+     Copyright (C) 2016 The Android Open Source Project
+
+     Licensed under the Apache License, Version 2.0 (the "License");
+     you may not use this file except in compliance with the License.
+     You may obtain a copy of the License at
+
+          http://www.apache.org/licenses/LICENSE-2.0
+
+     Unless required by applicable law or agreed to in writing, software
+     distributed under the License is distributed on an "AS IS" BASIS,
+     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+     See the License for the specific language governing permissions and
+     limitations under the License.
+-->
+
+<!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+  - This layout displays the complete details of a given day's weather, including the date, a    -
+  - weather icon and description, the high and low temperature, the humidity, pressure, and the  -
+  - wind speed and direction.                                                                    -
+  -                                                                                              -
+  - In order to use Android's data binding capabilities, (to avoid having to type findViewById   -
+  - over and over again) we wrap this layout in a <layout></layout> tag.                         -
+  -                                                                                              -
+  - Note that this is the PORTRAIT version of the layout.                                        -
+  - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
+
+
+<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/pullToRefresh"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@android:color/black"
-    android:focusableInTouchMode="true"
-    tools:context=".MainActivity">
+    android:layout_height="wrap_content">
 
-
-    <android.support.design.widget.AppBarLayout
+    <!-- COMPLETED (34) Create a LinearLayout to contain two included layouts that share equal space -->
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
+        <android.support.design.widget.AppBarLayout
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+            android:layout_height="wrap_content"
+            android:theme="@style/AppTheme.AppBarOverlay">
 
-    </android.support.design.widget.AppBarLayout>
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:background="?attr/colorPrimary"
+                app:popupTheme="@style/AppTheme.PopupOverlay" />
 
-    <!--<include layout="@layout/content_main"
-        />-->
+        </android.support.design.widget.AppBarLayout>
+        <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+          - To efficiently re-use complete layouts, you can use the <include/> tags to embed     -
+          - another complete layout inside the current layout. In Sunshine, this allows us to    -
+          - conveniently create layouts for both the portrait and landscape layouts for the      -
+          - DetailActivity. If we hadn't have used <include/> tags, we would have duplicated     -
+          - layout code all over the place, and any changes we wanted to make, we'd have to make -
+          - twice.                                                                               -
+          - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
+        <!-- COMPLETED (32) Include the primary_weather_info layout -->
+        <include
+            android:id="@+id/primary_info"
+            layout="@layout/thermometer"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1" />
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        android:tint="@android:color/background_light"
+        <!-- COMPLETED (33) Include the extra_weather_details layout -->
+        <include
+            android:id="@+id/extra_details"
+            layout="@layout/extra_details"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1" />
 
-        app:srcCompat="@android:drawable/ic_menu_rotate" />
+    </LinearLayout>
+</android.support.v4.widget.SwipeRefreshLayout>
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/fab"
-        android:layout_alignParentEnd="true"
-        android:layout_marginRight="16dp"
-        android:src="@android:drawable/ic_menu_delete"
-        android:tint="@android:color/background_light"
-        android:visibility="gone"
-        app:layout_anchor="@id/fab"
-        app:layout_anchorGravity="top|center" />
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/fab2"
-        android:layout_alignParentEnd="true"
-        android:layout_marginRight="16dp"
-        android:layout_marginBottom="16dp"
-        android:src="@android:drawable/ic_input_delete"
-        android:tint="@android:color/background_light"
-        android:visibility="gone"
-        app:layout_anchor="@id/fab2"
-        app:layout_anchorGravity="top|center" />
-
-    <TextView
-        android:id="@+id/textview_temp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:background="@android:color/black"
-        android:textColor="@android:color/holo_green_dark"
-        android:textSize="36pt"
-        android:typeface="serif"
-        tools:text="25" />
-
-    <TextView
-        android:id="@+id/textview_temp_unit"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:layout_toRightOf="@+id/textview_temp"
-        android:background="@android:color/black"
-        android:text="ºC"
-        android:textColor="@android:color/holo_green_dark"
-        android:textSize="16pt"
-        android:typeface="serif"
-        tools:text="ºC" />
-
-    <TextView
-        android:id="@+id/textview_date"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textview_temp"
-        android:layout_centerInParent="true"
-        android:background="@android:color/black"
-        android:textColor="@android:color/white"
-        android:textSize="8pt"
-        android:typeface="sans"
-        tools:text="Thursday 25th May, 20:15" />
-
-    <android.support.design.widget.TextInputEditText
-        android:id="@+id/input_edit_text"
-        android:layout_width="60dp"
-        android:layout_height="48dp"
-        android:layout_above="@+id/fab4"
-        android:layout_alignParentEnd="true"
-        android:layout_marginRight="16dp" />
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_margin="@dimen/fab_margin"
-        android:layout_marginRight="16dp"
-        android:text="OK"
-        android:tint="@android:color/white"
-        app:srcCompat="@android:drawable/ic_menu_save" />
-
-    <android.support.design.widget.TextInputEditText
-        android:id="@+id/edit_user"
-        android:layout_width="180dp"
-        android:layout_height="48dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="64dp"
-        android:background="@android:color/darker_gray"
-        app:layout_anchorGravity="top|center" />
-
-    <android.support.design.widget.TextInputEditText
-        android:id="@+id/edit_pass"
-        android:layout_width="180dp"
-        android:layout_height="48dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="120dp"
-        android:background="@android:color/darker_gray"
-        app:layout_anchorGravity="top|center" />
-
-    <android.support.design.widget.TextInputEditText
-        android:id="@+id/edit_time"
-        android:layout_width="180dp"
-        android:layout_height="48dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="175dp"
-        android:background="@android:color/darker_gray"
-        app:layout_anchorGravity="top|center" />
-
-    <ProgressBar
-        android:id="@+id/progressBar"
-        style="?android:attr/progressBarStyle"
-        android:layout_width="296dp"
-        android:layout_height="158dp"
-        android:layout_centerInParent="true"
-        android:background="@android:color/black"
-        android:indeterminateDrawable="@drawable/progress_icon"
-        android:visibility="gone" />
-
-</RelativeLayout>
