--- a/app/src/main/res/layout/extra_details.xml
+++ b/app/src/main/res/layout/extra_details.xml
@@ -28,89 +28,25 @@
         android:paddingBottom="16dp">
 
         <!-- This guideline divides the layout into a left and right half and is used for alignment -->
-        <android.support.constraint.Guideline
-            android:id="@+id/horizontal_middle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.7" />
+        <android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/pager"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/tabs"
+            tools:layout_editor_absoluteX="60dp" />
 
-        <!-- Lowest temp label -->
-        <TextView
-            android:id="@+id/min_temp_label"
-            android:layout_width="wrap_content"
+        <android.support.design.widget.TabLayout
+            android:id="@+id/tabs"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/forecast_detail_horizontal_padding"
-            android:fontFamily="sans-serif"
-            android:text="@string/min_temp_label"
-            android:textColor="@color/primary_text"
-            app:layout_constraintBottom_toTopOf="@+id/max_temp_label"
-            app:layout_constraintEnd_toStartOf="@+id/horizontal_middle"
-            app:layout_constraintTop_toTopOf="@+id/extra_details" />
-
-        <!-- Highest temp -->
-        <TextView
-            android:id="@+id/low_temp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="sans-serif-light"
-            android:textColor="@color/low_temp"
-            android:textSize="@dimen/high_low_temp_text_size"
-            app:layout_constraintBottom_toBottomOf="@+id/min_temp_label"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/horizontal_middle"
-            app:layout_constraintTop_toTopOf="@+id/min_temp_label"
-            tools:text="19\u00b0" />
-
-        <TextView
-            android:id="@+id/low_temp_time"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/current_temp_detail_text_top_margin"
-            android:fontFamily="sans-serif-light"
-            android:textColor="@color/secondary_text"
-            app:layout_constraintEnd_toEndOf="@+id/low_temp"
-            app:layout_constraintStart_toStartOf="@id/low_temp"
-            app:layout_constraintTop_toBottomOf="@+id/low_temp"
-            tools:text="03:30 AM" />
-
-        <!-- Lowest temp label -->
-        <TextView
-            android:id="@+id/max_temp_label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/forecast_detail_horizontal_padding"
-            android:fontFamily="sans-serif"
-            android:text="@string/maximum_temp_label"
-            android:textColor="@color/primary_text"
-            app:layout_constraintBottom_toBottomOf="@+id/extra_details"
-            app:layout_constraintEnd_toStartOf="@+id/horizontal_middle"
-            app:layout_constraintTop_toBottomOf="@+id/min_temp_label" />
-
-        <!-- Lowest temp -->
-        <TextView
-            android:id="@+id/high_temp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="sans-serif-light"
-            android:textColor="@color/high_temp"
-            android:textSize="@dimen/high_low_temp_text_size"
-            app:layout_constraintBottom_toBottomOf="@+id/max_temp_label"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/horizontal_middle"
-            app:layout_constraintTop_toTopOf="@+id/max_temp_label"
-            tools:text="23\u00b0" />
-
-        <TextView
-            android:id="@+id/high_temp_time"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/current_temp_detail_text_top_margin"
-            android:fontFamily="sans-serif-light"
-            android:textColor="@color/secondary_text"
-            app:layout_constraintEnd_toEndOf="@+id/high_temp"
-            app:layout_constraintStart_toStartOf="@id/high_temp"
-            app:layout_constraintTop_toBottomOf="@+id/high_temp"
-            tools:text="08:30 PM" />
+            android:background="?attr/colorPrimary"
+            app:layout_constraintTop_toBottomOf="@id/pager"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:tabGravity="fill"
+            app:tabMode="fixed"
+            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+            tools:layout_editor_absoluteX="16dp"
+            app:tabTextColor="@color/white"/>
     </android.support.constraint.ConstraintLayout>
 </layout>
