--- a/app/src/main/res/layout/extra_details.xml
+++ b/app/src/main/res/layout/extra_details.xml
@@ -19,34 +19,35 @@
         android:id="@+id/extra_details"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/colorPrimary"
-        android:paddingStart="16dp"
-        android:paddingLeft="16dp"
-        android:paddingTop="16dp"
-        android:paddingEnd="16dp"
-        android:paddingRight="16dp"
-        android:paddingBottom="16dp">
+        android:background="@color/colorPrimary">
 
         <!-- This guideline divides the layout into a left and right half and is used for alignment -->
-        <android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
+        <com.example.myweatherdatabase.NonSwipeableViewPager
             android:id="@+id/pager"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toTopOf="@id/tabs"
-            tools:layout_editor_absoluteX="60dp" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:layout_editor_absoluteX="60dp"
+
+            android:paddingStart="8dp"
+            android:paddingLeft="8dp"
+            android:paddingTop="8dp"
+            android:paddingEnd="8dp"
+            android:paddingRight="8dp"
+            android:paddingBottom="8dp"/>
 
         <android.support.design.widget.TabLayout
             android:id="@+id/tabs"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="?attr/colorPrimary"
-            app:layout_constraintTop_toBottomOf="@id/pager"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/pager"
             app:tabGravity="fill"
             app:tabMode="fixed"
+            app:tabTextColor="@color/white"
             app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-            tools:layout_editor_absoluteX="16dp"
-            app:tabTextColor="@color/white"/>
+            tools:layout_editor_absoluteX="16dp" />
     </android.support.constraint.ConstraintLayout>
 </layout>
