--- a/app/src/main/res/layout/extra_details.xml
+++ b/app/src/main/res/layout/extra_details.xml
@@ -15,7 +15,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <android.support.constraint.ConstraintLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/extra_details"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -37,7 +37,7 @@
             android:paddingRight="8dp"
             android:paddingBottom="8dp"/>
 
-        <android.support.design.widget.TabLayout
+        <com.google.android.material.tabs.TabLayout
             android:id="@+id/tabs"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -49,5 +49,5 @@
             app:tabTextColor="@color/white"
             app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
             tools:layout_editor_absoluteX="16dp" />
-    </android.support.constraint.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
