--- a/app/src/main/res/layout/thermometer.xml
+++ b/app/src/main/res/layout/thermometer.xml
@@ -26,7 +26,7 @@
 
 
 
-        <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
@@ -37,7 +37,7 @@
              - This Guideline divides the screen into a left half and a right half and is used to    -
              - anchor the views to the middle of the screen.                                         -
              - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
-            <android.support.constraint.Guideline
+            <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/horizontal_middle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -122,6 +122,6 @@
                 app:layout_constraintTop_toBottomOf="@+id/textview_temperature"
                 tools:text="12:15 PM" />
 
-        </android.support.constraint.ConstraintLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
