--- a/app/src/main/res/layout/thermometer.xml
+++ b/app/src/main/res/layout/thermometer.xml
@@ -92,6 +92,20 @@
                 app:layout_constraintTop_toBottomOf="@+id/icon"
                 tools:text="Home" />
 
+            <TextView
+                android:id="@+id/livedata_temp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/current_temp_detail_text_top_margin"
+                android:fontFamily="sans-serif-light"
+                android:textColor="@color/primary_text"
+                android:textSize="@dimen/current_temp_detail_text_size"
+                app:layout_constraintHorizontal_bias="0.52"
+                app:layout_constraintLeft_toLeftOf="@+id/icon"
+                app:layout_constraintRight_toRightOf="@+id/icon"
+                app:layout_constraintTop_toBottomOf="@+id/textview_therm_name"
+                tools:text="35" />
+
             <!--Current Temperature-->
             <TextView
                 android:id="@+id/textview_temperature"
