--- a/app/src/main/res/layout/thermometer.xml
+++ b/app/src/main/res/layout/thermometer.xml
@@ -99,13 +99,26 @@
                 android:layout_marginTop="@dimen/current_temp_detail_text_top_margin"
                 android:fontFamily="sans-serif-light"
                 android:textColor="@color/primary_text"
-                android:textSize="@dimen/current_temp_detail_text_size"
+                android:textSize="10sp"
                 app:layout_constraintHorizontal_bias="0.52"
                 app:layout_constraintLeft_toLeftOf="@+id/icon"
                 app:layout_constraintRight_toRightOf="@+id/icon"
                 app:layout_constraintTop_toBottomOf="@+id/textview_therm_name"
                 tools:text="35" />
-
+            <TextView
+                android:id="@+id/livedata_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/current_temp_detail_text_top_margin"
+                android:fontFamily="sans-serif-light"
+                android:textColor="@color/primary_text"
+                android:textSize="10sp"
+                app:layout_constraintHorizontal_bias="0.52"
+                app:layout_constraintLeft_toLeftOf="@+id/icon"
+                app:layout_constraintRight_toRightOf="@+id/icon"
+                app:layout_constraintTop_toBottomOf="@+id/livedata_temp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                tools:text="2019/01/01" />
             <!--Current Temperature-->
             <TextView
                 android:id="@+id/textview_temperature"
