--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -7,4 +7,14 @@
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/action_add"
+        android:orderInCategory="100"
+        android:title="Add one sample"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/action_remove_all"
+        android:orderInCategory="100"
+        android:title="Remove all"
+        app:showAsAction="never" />
 </menu>
